# bolt

./: .gitignore  LICENSE  Page.md  README.md  about.md  bolt-EXAMPLE.pth  requirements.txt  setup.py
benchlib/: engine.py  metrics.py  parameter.py  program.py
bolt/: __init__.py  engine.py  metric.py  metrics.py  parameter.py  program.py  report.py  runner.py  task.py
bolt/sample/: keventask.py
bolt/samples/: __init__.py  confusion_matrix_bench.py  fib_bench.py  fibonacci.py  keventask.py  mockprog.py  rootfinder.py  rootfinder_bench.py  run_all_validations.py
bolt/samples/external_programs/: external_fib.py
bolt/samples/fibonacci/: __init__.py  fib_program.py  fibonacci_bench.py
bolt/samples/k_even_single_exec/: client.py
bolt/samples/tests/: fibonacci_test.py
bolt/tests/: __init__.py  engine_test.py  fibonacci_test.py  metric_test.py  metrics_test.py  parameter_test.py  program_controller_test.py  rootfinder_test.py  run_all_validations.py  runner_test.py  task_test.py
bolt/tests/programs/: __init__.py  fib_bench.py  fibonacci.py  mockprog.py  rootfinder.py  rootfinder_bench.py
bolttests/: engine_test.py  fibonacci_test.py  program_controller_test.py  rootfinder_test.py  run_all_validations.py
bolttests/programs/: fib_bench.py  fibonacci.py  mockprog.py  rootfinder.py  rootfinder_bench.py
pages/: about.md
projects/polygons/: polygon_bench.py
projects/polygons/polygons_classification/: CMakeLists.txt  classify_polygons.cpp
samples/: fibonacci.py  rootfinder.py
unittests/: engine_test.py
(+2 files in other folders)
